# aio-fluid

./: .coveragerc  .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  MANIFEST.in  Makefile  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  setup.cfg  setup.py  sitemap.xml  taplo.toml
.dev/: docs.py  install  install-flamegraph  lint  test-version
.github/: copilot-instructions.md
.github/instructions/: code.instructions.md  release.instructions.md  tests.instructions.md
.github/workflows/: build.yml  release.yml  update.yml
assets/: fluid-manifest.json
dev/: install  lint  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
docs/: CNAME  index.md  release-notes.md  scheduler.md
docs/assets/: fluid-head-snippet.html
docs/reference/: broker.md  db.md  db_cli.md  db_crud.md  db_migrations.md  db_pagination.md  dispatchers.md  errors.md  http_client.md  index.md  task.md  task_broker.md  task_cli.md  task_consumer.md  task_manager.md  task_plugin.md  task_registry.md  task_retry.md  task_run.md  task_scheduler.md  task_scheduling.md  tast_consumer.md  utils.md  workers.md
docs/tutorials/: db.md  dispatchers.md  index.md  scheduler.md  task_app.md  task_broker.md  task_k8s.md  task_queue.md  task_retry.md  workers.md
docs_src/: simple_worker.py  worker_context_manager.py
examples/: __main__.py  all_features.py  cli.py  full_cli.py  main.py  main_db.py  main_tasks.py  simple.py  simple_cli.py  simple_fastapi.py  tasks.py
examples/db/: __init__.py  cli.py  tables1.py  tables2.py
examples/db/migrations/: alembic.ini  env.py
examples/db/migrations/versions/: 1f91ed2b2f26_initial.py  b2ee259b4966_initial.py
examples/docs/: data_dispatcher.py  simple_dispatcher.py  simple_worker.py  worker_context_manager.py
examples/tasks/: __init__.py
examples/tasks/migrations/: alembic.ini  env.py
examples/tasks/migrations/versions/: d941c11ca25a_jsonb.py  eae1cf7032bd_initial.py
fluid/: __init__.py  backdoor.py  cors.py  datajson.py  db.py  dev.py  executor.py  fields.py  http.py  json.py  kernel.py  log.py  node.py  redis.py  redis_status.py  redoc.py  schema.py  service.py  settings.py  stacksampler.py  status.py  sync_run.py  text.py  types.py  utils.py  webcli.py
fluid/db/: __init__.py  cli.py  container.py  crud.py  cursor.py  migration.py  models.py  pagination.py  utils.py
fluid/github/: __init__.py  client.py  repo.py
fluid/scheduler/: __init__.py  broker.py  cli.py  common.py  constants.py  consumer.py  cpubound.py  crontab.py  db.py  endpoints.py  errors.py  every.py  k8s_job.py  models.py  plugin.py  readme.md  scheduler.py  scheduler_crontab.py  scheduler_every.py  settings.py  task.py  task_info.py  task_run.py  utils.py
fluid/tasks_api/: __init__.py  endpoints.py  service.py
fluid/tools/: backdoor.py  dispatcher.py  kernel.py  redis.py  stacksampler.py  text.py  timestamp.py  worker.py
fluid/tools_aiohttp/: backdoor.py  db.py  http.py  kong.py  node.py  service.py  stacksampler.py
fluid/tools_fastapi/: __init__.py  backdoor.py  service.py
fluid/utils/: backdoor.py  data.py  dates.py  dispatcher.py  errors.py  http_client.py  http_monitor.py  json2.py  kernel.py  lazy.py  log.py  models.py  patch_pydanclick.py  redis.py  stacksampler.py  text.py  waiter.py  worker.py
reference/: index.html
reference/db/: index.html
reference/db_cli/: index.html
reference/db_crud/: index.html
reference/db_migrations/: index.html
reference/db_pagination/: index.html
reference/dispatchers/: index.html
reference/errors/: index.html
reference/http_client/: index.html
reference/task/: index.html
reference/task_broker/: index.html
reference/task_cli/: index.html
reference/task_consumer/: index.html
reference/task_manager/: index.html
reference/task_plugin/: index.html
reference/task_registry/: index.html
reference/task_retry/: index.html
reference/task_run/: index.html
reference/task_scheduler/: index.html
reference/task_scheduling/: index.html
reference/tast_consumer/: index.html
reference/utils/: index.html
reference/workers/: index.html
release-notes/: index.html
scheduler/: index.html
search/: search_index.json
tests/: app.py  conftest.py  test_fields.py  test_http.py  test_kernel.py  test_node.py  test_redis.py  test_scheduler.py  test_worker.py
tests/db/: conftest.py  test_cli.py  test_cruddb.py  test_cursor.py  test_paginate.py  test_sync_engine.py
tests/scheduler/: conftest.py  tasks.py  test_cli.py  test_config.py  test_crontab.py  test_db_plugin.py  test_endpoints.py  test_every.py  test_interrupted.py  test_k8s.py  test_retry.py  test_scheduler.py
tests/scripts/: long_line.py
tests/utils/: test_http.py  test_log.py  test_rest.py  test_utils.py  test_worker.py
tutorials/: index.html
tutorials/db/: index.html
tutorials/dispatchers/: index.html
tutorials/scheduler/: index.html
tutorials/task_app/: index.html
tutorials/task_broker/: index.html
tutorials/task_k8s/: index.html
tutorials/task_queue/: index.html
tutorials/task_retry/: index.html
tutorials/workers/: index.html
