[project]
name = "aio-fluid"
version = "1.3.4"
description = "Tools for backend python services"
authors = [
    { name = "Luca Sbardella", email = "luca@quantmind.com" }
]
license = "BSD"
readme = "readme.md"

[tool.poetry]
packages = [
    {include = "fluid"}
]

[project.urls]
"Repository" = "https://github.com/quantmind/aio-fluid"
"Issues" = "https://github.com/quantmind/aio-fluid/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
inflection = "^0.5.1"
redis = {version = "^5.0.1", extras = ["hiredis"] }
pydantic = "^2.9.2"
yarl = "^1.15.5"
fastapi = {version = "^0.115.2"}
uvicorn = {version = "0.34.0"}
aioconsole = {version = "^0.8.0" }
typing-extensions = "^4.12.2"
pydanclick = {version = "0.5.0", optional = true}
sqlalchemy = {version = "^2.0.23", optional = true}
python-json-logger = {version = "^3.2.1", optional = true}
click = {version = "^8.1.7", optional = true}
rich = {version = "^13.7.1", optional = true}
aiohttp = {version = "^3.10.10", optional = true}
alembic = {version = "^1.13.2", optional = true}
sqlalchemy-utils = {version = "^0.41.2", optional = true}
python-dateutil = {version = "^2.9.0", optional = true}
asyncpg = {version = "^0.30.0", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}
httpx = {version = "^0.28.1", optional = true}
prometheus-client = {version = "^0.21.0", optional = true}
kubernetes = {version = "^32.0.0", optional = true}
kubernetes-asyncio = {version = "^32.0.0", optional = true}
python-slugify = {version = "^8.0.4", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^6.0.0"
black = "^25.1.0"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
pytest-asyncio = "^0.25.2"
ruff = "^0.9.5"
types-redis = "^4.6.0.3"
types-python-dateutil = "^2.9.0.20240316"
python-dotenv = "^1.0.1"
ipython = "^8.32.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.15"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-redirects = "^1.2.1"
mkdocstrings = {version = "0.26.2", extras = ["python"]}
griffe-pydantic = "^1.1.0"
griffe-typingdoc = "^0.2.7"

[tool.poetry.extras]
cli = ["click", "rich", "pydanclick"]
db = [
    "click",
    "rich",
    "pydanclick",
    "sqlalchemy",
    "sqlalchemy-utils",
    "alembic",
    "python-dateutil",
    "psycopg2-binary",
    "asyncpg"
]
http = [
    "aiohttp",
    "httpx",
    "prometheus_client",
    "python-slugify"
]
k8s = [
    "kubernetes",
    "kubernetes-asyncio"
]
log = ["python-json-logger"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = [
    "tests"
]
markers = [
    "flaky: marks test as flaky"
]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["A", "E", "W", "F", "I", "B", "N"]
line-length = 88
exclude = [
    "examples/db/migrations",
]

[tool.mypy]
exclude = "examples/db/migrations"

[[tool.mypy.overrides]]
module = [
    "aioconsole.*",
    "kubernetes.*",
    "kubernetes_asyncio.*",
    "sqlalchemy_utils.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["return"]
