[project]
name = "aio-fluid"
version = "1.6.2"
description = "Tools for backend python services"
authors = [{ name = "Luca Sbardella", email = "luca@quantmind.com" }]
license = "BSD"
readme = "readme.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "inflection >= 0.5.1",
    "redis[hiredis] >= 5.0.1",
    "pydantic >= 2.9.2",
    "yarl >= 1.15.5",
    "fastapi >= 0.115.2",
    "uvicorn >= 0.34.0",
    "aioconsole >= 0.8.0",
    "typing-extensions >= 4.12.2",
]

[tool.poetry]
packages = [{ include = "fluid" }]

[project.urls]
"Repository" = "https://github.com/quantmind/aio-fluid"
"Issues" = "https://github.com/quantmind/aio-fluid/issues"

[project.optional-dependencies]
cli = ["click >= 8.1.7", "rich >= 13.7.1", "pydanclick >= 0.5.0"]
db = [
    "click >= 8.1.7",
    "rich >= 13.7.1",
    "pydanclick >= 0.5.0",
    "sqlalchemy >= 2.0.23",
    "sqlalchemy-utils >= 0.41.2",
    "alembic >= 1.13.2",
    "python-dateutil >= 2.9.0",
    "psycopg2-binary >= 2.9.9",
    "asyncpg >= 0.30.0",
]
http = [
    "aiohttp >= 3.10.10",
    "httpx >= 0.28.1",
    "prometheus-client >= 0.21.0",
    "python-slugify >= 8.0.4",
]
k8s = [
    "kubernetes >= 32.0.0",
    "kubernetes-asyncio >= 32.0.0",
    "python-slugify >= 8.0.4",
]
log = ["python-json-logger >= 3.2.1"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^6.0.0"
black = "^25.1.0"
pytest-cov = "^6.0.0"
mypy = "^1.16.1"
pytest-asyncio = "^0.25.2"
ruff = "^0.12.2"
types-redis = "^4.6.0.3"
types-python-dateutil = "^2.9.0.20240316"
python-dotenv = "^1.0.1"
ipython = "^8.32.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.15"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-redirects = "^1.2.1"
mkdocstrings = { version = "0.26.2", extras = ["python"] }
griffe-pydantic = "^1.1.0"
griffe-typingdoc = "^0.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
markers = ["flaky: marks test as flaky"]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["A", "E", "W", "F", "I", "B", "N"]
line-length = 88
exclude = ["examples/db/migrations"]

[tool.mypy]
exclude = "examples/db/migrations"

[[tool.mypy.overrides]]
module = [
    "aioconsole.*",
    "kubernetes.*",
    "kubernetes_asyncio.*",
    "sqlalchemy_utils.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["return"]
