[project]
name = "aio-fluid"
version = "2.2.3"
description = "Tools for backend python services"
authors = [
    { name = "Luca Sbardella", email = "luca@quantmind.com" },
]
license = "BSD-3-Clause"
readme = "readme.md"
requires-python = ">=3.11,<4.0"
keywords = [
    "async",
    "asyncio",
    "task-scheduler",
    "task-queue",
    "workers",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "inflection >= 0.5.1",
    "redis[hiredis] >= 7.4.0",
    "pydantic >= 2.12.5",
    "yarl >= 1.23.0",
    "fastapi >= 0.135.2",
    "uvicorn >= 0.42.0",
    "typing-extensions >= 4.12.2",
]

[project.urls]
"Documentation" = "https://fluid.quantmind.com/"
"Repository" = "https://github.com/quantmind/aio-fluid"
"Issues" = "https://github.com/quantmind/aio-fluid/issues"

[project.optional-dependencies]
cli = [
    "click >= 8.1.7",
    "pydanclick >= 0.5.0",
    "rich >= 13.7.1",
]
console = [
    "aioconsole >= 0.8.2",
]
db = [
    "alembic >= 1.18.4",
    "asyncpg >= 0.30.0",
    "click >= 8.1.7",
    "psycopg2-binary >= 2.9.9",
    "python-dateutil >= 2.9.0",
    "sqlalchemy >= 2.0.23",
    "sqlalchemy-utils >= 0.41.2",
]
dev = [
    "black >= 26.1.0",
    "ipython >= 9.10.0",
    "isort >= 8.0.1",
    "mypy >= 1.20.0",
    "pytest >= 9.0.2",
    "pytest-asyncio >= 1.3.0",
    "pytest-cov >= 7.0.0",
    "python-dotenv >= 1.0.1",
    "ruff >= 0.15.4",
    "types-python-dateutil >= 2.9.0.20240316",
    "types-redis >= 4.6.0.3",
]
docs = [
    "griffe-pydantic >= 1.1.0",
    "griffe-typingdoc >= 0.3.1",
    "mkdocs-macros-plugin >= 1.3.7",
    "mkdocs-material >= 9.7.0",
    "mkdocs-redirects >= 1.2.1",
    "mkdocstrings[python] >= 1.0.3",
]
http = [
    "aiohttp >= 3.10.10",
    "httpx >= 0.28.1",
    "prometheus-client >= 0.21.0",
    "python-slugify >= 8.0.4",
]
k8s = [
    "kubernetes >= 32.0.0",
    "kubernetes-asyncio >= 32.0.0",
    "python-slugify >= 8.0.4",
]
log = [
    "python-json-logger >= 3.2.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "fluid",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = [
    "tests",
]
markers = [
    "flaky: marks test as flaky",
]

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = [
    "A",
    "E",
    "W",
    "F",
    "I",
    "B",
    "N",
]
line-length = 88
exclude = [
    "examples/db/migrations",
]

[tool.mypy]
exclude = "examples/db/migrations"

[[tool.mypy.overrides]]
module = [
    "aioconsole.*",
    "kubernetes.*",
    "kubernetes_asyncio.*",
    "sqlalchemy_utils.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = [
    "return",
]
